--- a/app/views/templates/task_list.html.slim
+++ b/app/views/templates/task_list.html.slim
@@ -15,6 +15,13 @@
     div.panel-heading     
       editablespan(model="list.name" on-ready="listNameEdited(list.name)" input-class="form-control" span-class="list-name")
 
+    a.fb-button__link(href="#" target="_blank" aria-label="Facebook")
+      div.fb-button.fb-button--facebook.fb-button-medium
+        div.fb-button__icon.fb-button__icon--solid(aria-hidden="true")
+          svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24")
+            path(d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z")
+        ' Share On Facebook
+
     form#new_task(ng-submit="addTask()")
       .input-group
         input#taskDescription.form-control.input-lg(type="text" autofocus="autofocus" placeholder="Task description" maxlength="255" ng-model="taskDescription" data-non-blank)
