--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -10,7 +10,10 @@
         = link_to "Sign up", new_user_registration_path
       li(class=active_if_current(new_user_session_path))
         = link_to "Sign in", new_user_session_path
-      li(class=active_if_current(new_user_session_path))
+      li(class=active_if_current(user_omniauth_authorize_path(:google_oauth2)))
         = link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2)
+      li(class=active_if_current(user_omniauth_authorize_path(:facebook)))
+        = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
+
   h3.text-muted
     = link_to "Todo Application", root_path
